--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,47 +10,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.8'
+
+    - name: Cache pip
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest
 
     - name: Run tests
       run: |
-        pytest tests/test_URL.py  # Update this path to the actual test file location
-
-    - name: Upload pytest results
-      if: always()
-      uses: actions/upload-artifact@v2
-      with:
-        name: pytest-results
-        path: pytest-results
-
-    - name: Generate coverage report
-      run: |
-        pip install coverage
-        coverage run -m pytest tests/test_URL.py  # Update this path to the actual test file location
-        coverage report -m
-        coverage xml
-        coverage html -d coverage_html_report
-
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v2
-      with:
-        name: coverage-html-report
-        path: coverage_html_report
-
-    - name: Publish coverage to Coveralls
-      uses: coverallsapp/github-action@v1
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: coverage.xml
+        pytest tests/
